[package]
name = "parsnip"
version = "0.2.2"
authors = ["Erik A. Partridge <erik.partridge@mail.mcgill.ca>"]
license = "MIT"
homepage = "https://github.com/ErikPartridge/parsnip"
repository = "https://github.com/ErikPartridge/parsnip"
categories = ["science"]
description = "Data science metrics (presently categorical only) for Rust."
readme = "README.md"

[badges]
is-it-maintained-issue-resolution = { repository = "ErikPartridge/parsnip" }
is-it-maintained-open-issues = { repository = "ErikPartridge/parsnip" }
travis-ci = { repository = "ErikPartridge/parsnip", branch = "master" }

[dependencies]